# mrok-minecraft--telegram-bot

./: .env  .env.example  Dockerfile  LICENSE  docker-compose.yml  main.py  pyproject.toml  start.sh  stop.sh
