[project]
name = "username-changer-bot"
version = "1.0.0"
description = "Add your description here"

authors = [{ name = "Ilnaz Mingaleev", email = "ilnazm1ngaleev@yandex.com" }]
readme = "README.md"

requires-python = "~=3.13.7"
dependencies = [
    "aiogram>=3.21.0",
    "pydantic-settings>=2.10.1",
    "aiocron>=1.8",
    "mcrcon>=0.7.0",
]